--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     envVars:
       - key: DB_URL
         fromDatabase:
-          name: test-db-blueprint-ha-2
+          name: test-blueprint-db-01
           property: connectionString
 
 databases:
